# SampleMind-AI

./: .aider.chat.history.md  .aider.input.history  .augment-guidelines  .claudeignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  AGENT_EXECUTION_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXECUTION_SUMMARY.md  FINAL_LAUNCH_SUMMARY.md  LAUNCH_CHECKLIST.md  LICENSE  MASTER_EXECUTION_INDEX.md  PREMIUM_EXECUTION_FRAMEWORK_PART2.md  README.md  ROADMAP.md  SECURITY.md  alembic.ini  pyproject.toml  samplemind-server.spec
.auggie/: .markdownlint.yaml  README-PATHS.md  agents.yaml  rules.md  settings.yaml
.auggie/hooks/: pre-commit.yaml
.auggie/prompts/: api-design.md  code-review.md
.auggie/skills/: analyze_audio.yaml  auth.yaml  batch_import.yaml  build.yaml  check.yaml  coverage.yaml  db_inspect.yaml  db_migrate.yaml  fingerprint.yaml  generate_sample.yaml  health_check.yaml  import_samples.yaml  lint.yaml  list_samples.yaml  pack.yaml  run_tests.yaml  search.yaml  semantic_search.yaml  serve_api.yaml  serve_web.yaml  setup_dev.yaml  sidecar.yaml  start.yaml  tag.yaml
.auggie/tools/: debug.yaml  vscode.yaml
.auggie/workflows/: add-audio-feature.yaml  ci-check.yaml  debug-classifier.yaml  dev-start.yaml  fl-export.yaml  onboard-dev.yaml  pack-create.yaml  release.yaml
.augment/: .markdownlint.yaml  README.md  routing.yaml  rules.md  settings.yaml
.augment/agents/: AGENTS.md  api-agent.md  audio-analyzer.md  devops-agent.md  doc-writer.md  fl-studio-agent.md  ml-agent.md  phase-01-foundation.md  phase-02-audio-testing.md  phase-03-database.md  phase-04-cli.md  phase-05-web.md  phase-06-desktop.md  phase-07-fl-studio.md  phase-08-vst-plugin.md  phase-09-sample-packs.md  phase-10-production.md  phase-11-semantic-search.md  phase-12-ai-curation.md  phase-13-cloud-sync.md  phase-14-analytics.md  phase-15-marketplace.md  phase-16-ai-generation.md  security-agent.md  tauri-builder.md  test-runner.md  web-agent.md
.augment/commands/: analyze.md  build.md  debug.md  health.md  pack.md  phase-doc.md  search.md  sidecar.md
.augment/environments/: dev.yaml  prod.yaml
.augment/memories/: audio-analysis-patterns.md  classifier-thresholds.md  dev-environment.md  ipc-contract.md  phase-status.md  security-config.md
.augment/prompts/: debug-audio.md
.augment/skills/: batch_import.yaml  coverage.yaml  curate.yaml  db_inspect.yaml  import_samples.yaml  lint.yaml  pack.yaml  run_tests.yaml  search.yaml  serve_web.yaml  setup_dev.yaml  sidecar.yaml  start.yaml
.augment/tools/: terminal.yaml
.augment/workflows/: api-test.yaml  build-plugin.yaml  db-migration.yaml  generate-sample.yaml  new-feature.yaml  semantic-index.yaml
.claude/: IMPLEMENTATION.md  settings.json
.claude/agents/: AGENTS.md  api-agent.md  audio-analyzer.md  devops-agent.md  doc-writer.md  fase-02-audio-testing.md  fase-03-database.md  fase-04-cli.md  fase-05-web.md  fase-06-desktop.md  fase-07-fl-studio.md  fase-08-vst-plugin.md  fase-09-sample-packs.md  fase-10-production.md  fl-studio-agent.md  ml-agent.md  phase-01-foundation.md  phase-02-audio-testing.md  phase-03-database.md  phase-04-cli.md  phase-05-web.md  phase-06-desktop.md  phase-07-fl-studio.md  phase-08-vst-plugin.md  phase-09-sample-packs.md  phase-10-production.md  phase-11-semantic-search.md  phase-12-ai-curation.md  phase-13-cloud-sync.md  phase-14-analytics.md  phase-15-marketplace.md  phase-16-ai-generation.md  security-agent.md  tauri-builder.md  test-runner.md  web-agent.md
.claude/commands/: analyze.md  auth.md  build.md  check.md  db-inspect.md  db-migrate.md  export.md  import.md  lint.md  list.md  phase-doc.md  serve.md  setup.md  start.md  stats.md  tag.md  test.md  workflow.md
.claude/settings/: kfc-settings.json
.claude/steering/: always-audio-domain.md  always-python-tooling.md  conditional-database.md  conditional-tauri-ipc.md  conditional-testing.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  REPOSITORY_SETUP.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/agents/: api-agent.md  audio-analyzer.agent.md  devops-agent.md  document-creator.agent.md  fl-studio-agent.agent.md  ml-agent.md  phase-01-foundation.md  phase-02-audio-testing.md  phase-03-database.md  phase-04-cli.md  phase-05-web.md  phase-06-desktop.md  phase-07-fl-studio.md  phase-08-vst-plugin.md  phase-09-sample-packs.md  phase-10-production.md  phase-11-semantic-search.md  phase-12-ai-curation.md  phase-13-cloud-sync.md  phase-14-analytics.md  phase-15-marketplace.md  phase-16-ai-generation.md  security-agent.md  tauri-builder.md  test-runner.agent.md  web-agent.agent.md  web-agent.md
.github/workflows/: ci.yml  community-metrics.yml  python-lint.yml  release.yml
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: App.svelte  main.ts
app/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  main.rs  state.rs
discord_bot/: README.md  bot.py
docs/en/: README.md  (+18 more)
marketing/: demo_video_script.md  launch_announcement.md  launch_blog_post.md  press_release.md  twitter_launch_thread.md
migrations/: env.py  script.py.mako
plugin/: CMakeLists.txt  CMakePresets.json
plugin/Source/: IPCSocket.cpp  IPCSocket.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PythonSidecar.cpp  PythonSidecar.h
scripts/: build-desktop.sh  build-plugin.sh  quick-fix.sh  release.sh  setup-dev.sh  start.sh  validate-au.sh
src/: main.py
tests/: conftest.py  test_agent.py  test_analytics.py  test_audio_analysis.py  test_auth.py  test_clap_embeddings.py  test_classifier.py  test_cli.py  test_cloud_sync.py  test_fingerprint.py  test_fl_studio.py  test_fts.py  test_generation.py  test_integration.py  test_integrations.py  test_local_ai.py  test_packs.py  test_sample_repository.py  test_semantic_search.py  test_sidecar.py  test_stats.py  test_web.py
(+179 files in other folders)
