[project]
name = "samplemind"
version = "0.2.0"
description = "AI-powered sample library and DAW companion — semantic search, agent automation, FL Studio integration"
authors = [{ name = "lchtangen" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

dependencies = [
    # ── Audio analysis ────────────────────────────────────────────────────────
    "librosa==0.11.0", # BPM, key, spectral features — pinned for reproducibility
    "numpy>=2.2",
    "scipy>=1.15",
    "soundfile>=0.13",
    "soxr>=0.5",       # high-quality resampling (scipy FFT backend)
    # ── Machine learning (rule-based classifier + future neural models) ───────
    "scikit-learn>=1.6", # RandomForest, KNN — future ML classifier upgrade
    "numba>=0.61",       # JIT acceleration for librosa internals
    # ── Vector search (semantic sample retrieval) ─────────────────────────────
    # sqlite-vec: pure-C SQLite extension for float32/int8/binary vectors;
    # zero external dependencies, MIT/Apache-2.0, works wherever SQLite works.
    # Used for Phase 5 CLAP-embedding semantic search without a separate DB server.
    "sqlite-vec>=0.1.7",
    # ── AI Agent framework ────────────────────────────────────────────────────
    # pydantic-ai: model-agnostic agent framework from the Pydantic team;
    # type-safe tool definitions, structured outputs, streaming support.
    # Used for Phase 12 AI-agent automation (auto-tag, smart import, Q&A).
    "pydantic-ai>=1.0",
    # ── Web server ────────────────────────────────────────────────────────────
    "flask>=3.1",
    "flask-cors>=5.0",
    "jinja2>=3.1",
    # ── API layer (FastAPI + async) ───────────────────────────────────────────
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    # ── Database ORM ──────────────────────────────────────────────────────────
    "sqlmodel>=0.0.21", # SQLAlchemy 2.0 + Pydantic v2 in one class
    "alembic>=1.14",    # versioned schema migrations
    # ── Auth ──────────────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "pydantic[email]>=2.9",
    "itsdangerous>=2.2",
    # ── CLI ───────────────────────────────────────────────────────────────────
    "typer>=0.12",
    "rich>=13",
    # ── Utilities ─────────────────────────────────────────────────────────────
    "requests>=2.32",
    "platformdirs>=4.3",
    # ── Structured logging + observability ───────────────────────────────────
    "structlog>=24.4",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "pytest-xdist>=3.6",     # parallel test execution (-n auto)
    "pytest-timeout>=2.3",   # per-test timeout — prevents hangs in VSCode/CI
    "pytest-benchmark>=4.0", # performance regression tests
    "hypothesis>=6.0",       # property-based / fuzz testing

    # Lint / format / type-checking
    "ruff>=0.15",       # replaces flake8 + isort + black; v0.15 adds range suppressions
    "pyright>=1.1.390", # Rust-based type checker, replaces mypy
    "pre-commit>=4",

    # Distribution
    "pyinstaller>=6.10", # sidecar binary build (Phase 11)
]

# FL Studio MIDI integration (optional — requires system rtmidi)
midi = ["python-rtmidi>=1.5"]

# FL Studio Windows COM automation (optional — Windows only)
windows = ["pywin32>=306"]

# Local AI inference via GGUF models — install with: uv sync --extra local-ai
# Enables LocalAIEngine for offline tag generation (samplemind tag --auto).
# llama-cpp-python compiles a native extension; pre-built wheels available for
# Linux x86_64, macOS arm64/x86_64.  WSL2 users: ensure build-essential is
# installed (sudo apt-get install build-essential) if no wheel is available.
local-ai = [
    "llama-cpp-python>=0.3.4",
    "huggingface-hub>=0.23",
]

# CLAP audio embeddings — install with: uv sync --extra clap
# Enables AudioEmbedder for 512-dim semantic audio search (cross-modal text queries).
# Note: laion-clap==1.1.7 requires numpy<2.0 (incompatible with Python 3.13 + numpy>=2.2).
# Uses transformers.ClapModel which is numpy 2.x compatible.
clap = [
    "transformers>=4.40",
    "torch>=2.0",
]

# Analytics charts (optional — requires plotly)
analytics = ["plotly>=5.0"]

# Cloud sync (optional — requires boto3)
sync = ["boto3>=1.35"]

# AI semantic search models — install with: uv sync --extra ai
# Compatible with Python 3.13 + numpy 2.x.
#
# LEGACY AUDIO-AI PACKAGES (require Python ≤3.11 or numpy<2 — use conda env):
#   laion-clap==1.1.7  → numpy<2.0 conflict; use HuggingFace ClapModel instead
#   madmom==0.16.1     → requires Cython, doesn't build on Python 3.13
#   Recommended conda env for these: python=3.11, numpy=1.26
ai = [
    "sentence-transformers>=3.0", # semantic text embedding for tag/description search
    # Future: HuggingFace ClapModel via transformers>=4.40 (numpy 2.x compatible)
    # Future: msclap (Microsoft CLAP v2) when numpy 2.x support is released
]

# Embedding models — lightweight semantic search (numpy-2.x compatible)
embeddings = [
    "sentence-transformers>=3.0", # semantic tag/description search via text embeddings
]

[project.scripts]
samplemind = "samplemind.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/samplemind"]

# ── pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
# Default: skip slow tests so `uv run pytest` is fast in VSCode / CI fast lane.
# Run the full suite with: uv run pytest --slow  OR  uv run pytest -m ""
addopts = "-v --tb=short -m 'not slow'"
asyncio_mode = "auto"
# Per-test timeout — prevents any single test from hanging indefinitely.
# Raise per test with @pytest.mark.timeout(N). Full suite may need --timeout=60.
timeout = 30
markers = [
    "slow: expensive audio analysis tests (skip with: pytest -m 'not slow')",
    "integration: requires real filesystem or database",
    "macos: requires macOS — AppleScript, AU plugin, IAC MIDI driver",
    "juce: requires JUCE plugin built and installed",
    "benchmark: performance regression tests (run with: pytest -m benchmark)",
    "audio: tests that write or read WAV files (slower than pure unit tests)",
    "cli: tests that invoke Typer CLI commands via CliRunner",
    "duplicates: tests for the fingerprint/dedup module",
]

# ── Coverage ───────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["samplemind"]
omit = [
    "tests/*",
    "migrations/*",
    "src/main.py",
    # Legacy sqlite3 module — kept for reference only, replaced by SampleRepository
    "src/samplemind/data/database.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.ruff]
# Exclude legacy pre-Phase-1 source tree — not linted (still used by Tauri dev mode)
exclude = ["src/analyzer", "src/cli", "src/data", "src/web"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (undefined names, unused imports)
    "I",    # isort (import order)
    "UP",   # pyupgrade (use modern Python 3.13+ syntax)
    "B",    # flake8-bugbear (likely bugs and design issues)
    "C4",   # flake8-comprehensions (list/dict/set comprehension improvements)
    "SIM",  # flake8-simplify (simplifiable conditions and expressions)
    "RUF",  # Ruff-native rules (fast, well-tested)
    "PTH",  # flake8-use-pathlib (prefer pathlib over os.path)
    "ANN",  # flake8-annotations (enforce type hints on public functions)
    "S",    # flake8-bandit (security: avoid exec, assert in production, etc.)
    "PERF", # Perflint (avoid unnecessary list copies, use generators, etc.)
    "LOG",  # flake8-logging (correct logging API usage)
    "G",    # flake8-logging-format (no % or f-string in logger calls)
    "T20",  # flake8-print (ban print() in production code — use structlog or Rich)
]
ignore = [
    "E501",   # line too long — handled by ruff format
    "SIM108", # ternary operator — sometimes less readable than if/else
    "RUF012", # mutable class var annotation — SQLModel uses ClassVar pattern
    "B008",   # do not perform function call in default arg — Typer uses this
    "S101",   # assert — fine in tests (overridden per-file below)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "S105",
    "S106",
    "S107",
    "S108",
    "PTH",
    "ANN",
    "T20",
    "C408",
] # test-specific patterns ok
"src/main.py" = ["PTH", "E", "ANN", "T20"]
"migrations/*" = ["ANN", "S"]
# Legacy sqlite3 module — kept for reference only, not used by active code
"src/samplemind/data/database.py" = ["ANN", "E", "PTH", "RUF", "S", "SIM"]
# CLI commands intentionally use print() for terminal output (stdout/stderr IPC contract)
"src/samplemind/cli/commands/*.py" = ["T20", "PTH"]
# FastAPI route handlers — return types are declared via response_model= decorator
"src/samplemind/api/routes/*.py" = ["ANN201", "ANN001"]
# Flask web routes — ANN and PTH are verbose for route handlers
"src/samplemind/web/app.py" = ["ANN", "PTH"]
# Flask blueprints — route return types are complex unions; PTH fixed at call sites
"src/samplemind/web/blueprints/*.py" = ["ANN"]
# Auth module — string literals for token_type/algorithms are not hardcoded passwords
"src/samplemind/core/auth/*.py" = ["ANN", "S105", "S106", "S107"]
# model_loader.py — uses print() for progress output, complex **kwargs type
"src/samplemind/utils/model_loader.py" = ["T20", "ANN"]
# local_models.py — optional llama-cpp-python import; PLR2004 (magic value) in BPM ranges
"src/samplemind/ai/local_models.py" = ["PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["samplemind"]
force-sort-within-sections = true


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
exclude = [
    "migrations/",
    "src/main.py",
    # Legacy pre-Phase1 source tree — not type-checked (still used by Tauri dev mode)
    "src/analyzer/",
    "src/cli/",
    "src/data/",
    "src/web/",
    # Legacy sqlite3 module kept for reference only
    "src/samplemind/data/database.py",
    # Optional AI dependency (transformers) not installed in base venv
    "src/samplemind/utils/model_loader.py",
    # Optional llama-cpp-python / huggingface-hub not installed in base venv
    "src/samplemind/ai/local_models.py",
    # Optional torch / transformers not installed in base venv
    "src/samplemind/ai/embeddings.py",
    "build/",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pyright>=1.1.390",
    "pytest>=9",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.4.0",
]
