[package]
name = "samplemind-ai"
version = "0.1.0"
description = "SampleMind AI — Desktop Sample Organizer"
authors = ["lchtangen"]
edition = "2021"

# Prevents a terminal window from opening on Windows in release builds.
# Has no effect on Linux/macOS.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 — the core framework
tauri = { version = "2", features = ["tray-icon"] }

# Serialization — needed by Tauri for IPC messages
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
